fixed layout issues
[(FINISHES)#161834284]adjusted the pages layout as well as the size of the search bar and centered the text below the search bar

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -287,6 +287,11 @@ body {
 }
 
 /* css for awards page zc */ 
+.textwrapper{
+  max-width: 350px;
+  margin: auto;
+}
+
 .pastevents{
   padding-left: 20px;
 }
